--- a/gb/20/12/11/n12612201.md
+++ b/gb/20/12/11/n12612201.md
@@ -1,24 +1,25 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/drjlsn3260/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/drjlsn3260/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/drjlsn3260/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【直播】川普支持者国会山挑战选举人团认证</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/474101-600x400.jpg" />
-<h6>12月12日，数十万来自美国各州的民众聚集首都华盛顿DC，举行盛大集会和游行，要求“停止窃选”，力挺川普。（李辰／大纪元）
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>【重播】川普支持者国会山挑战选举人团认证</h2>
+<a href="https://dwzgr3popmlhv.cloudfront.net/D7dD6i38z"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6>12月15日，“制止窃选”（Stop The Steal）联盟在华盛顿国会山俱乐部发起“制止窃选、挑战选举人团认证”新闻发布会。（林乐予/大纪元）
 </h6>
 <hr>
 	<p>【大纪元2020年12月11日讯】美东时间周二（12月15日）下午1:00，美国民众再次在首都华盛顿发起“制止窃选、挑战选举人团认证”的活动。新唐人、大纪元将联合进行直播，敬请收看。</p>
-<p>“制止窃选（Stop Steal）”联盟此前发出新闻稿声明说，该联盟的领导人呼吁共和党议员加入国会议员莫?布鲁克斯（Mo Brooks）及其同事的倡议，在1月6日国会联席会议上挑战选举人团投票结果的认证，特别是挑战充满选民欺诈和选举舞弊指控的几个摇摆州的选举人投票结果认证。</p>
+<p><center><a src=""></a><a href="https://dwzgr3popmlhv.cloudfront.net/D7dD6i38z"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/lxvZJIUl3xI" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>“制止窃选（Stop Steal）”联盟此前发出新闻稿声明说，该联盟的领导人呼吁共和党议员加入国会议员莫?布鲁克斯（Mo Brooks）及其同事的倡议，在1月6日国会联席会议上挑战选举人团投票结果的认证，特别是挑战充满选民欺诈和选举舞弊指控的几个摇摆州的选举人投票结果认证。</p>
 <p>声明表示，根据美国宪法，缺少国会的认可就不能选举总统，首先是要选举人团达成协议，然而欺诈和政府滥权剥夺了这一公平过程。幸运的是，先贤们创建了安全的议程，即需要征得国会同意。</p>
-<p>昨天（14日），几个摇摆州政府选出的选举人团投票给民主党候选人拜登和参议员贺锦丽，但是宾州、乔治亚州、内华达州、<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E4%BA%9A%E5%88%A9%E6%A1%91%E9%82%A3.md#1">亚利桑那</a>州和密歇根州等的共和党选举人同日把票投给总统<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）和副总统彭斯。</p>
-<p>众议院共和党议员莫?布鲁克斯（Mo Brooks）昨天在福克斯采访中说，<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>总统事实上赢得了美国大选。布鲁克斯誓言要在1月6日的参众两院全体大会上挑战选举人团认证。</p>
+<p>昨天（14日），几个摇摆州政府选出的选举人团投票给民主党候选人拜登和参议员贺锦丽，但是宾州、乔治亚州、内华达州、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BA%9A%E5%88%A9%E6%A1%91%E9%82%A3.md#1">亚利桑那</a>州和密歇根州等的共和党选举人同日把票投给总统<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）和副总统彭斯。</p>
+<p>众议院共和党议员莫?布鲁克斯（Mo Brooks）昨天在福克斯采访中说，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>总统事实上赢得了美国大选。布鲁克斯誓言要在1月6日的参众两院全体大会上挑战选举人团认证。</p>
 <p>布鲁克斯呼吁至少一名参议员站出来跟他一起战斗，维护美国选举制度的公正。布鲁克斯说，现在全国范围内发生大选舞弊，“我们不应该计算非法票和让非法总统上台。”</p>
-<p>该活动在华盛顿特区国会山（Capitol Hill）举行，时间是12月15日星期二美东时间下午1:00，新闻界人士必须下午12:45进入。</p>
+<p>该活动在华盛顿特区国会山（Capitol Hill）俱乐部举行，时间是12月15日星期二美东时间下午1:00，新闻界人士必须下午12:45进入。</p>
+<figure id="attachment_12623079" aria-describedby="caption-attachment-12623079" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/12/65fdd08e6ccb8df3.jpg"><img class="size-large wp-image-12623079" src="https://i.epochtimes.com/assets/uploads/2020/12/65fdd08e6ccb8df3-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12623079" class="wp-caption-text">12月15日，“制止窃选”（Stop The Steal）联盟在华盛顿国会山俱乐部发起“制止窃选、挑战选举人团认证”新闻发布会。（林乐予/大纪元）</figcaption></figure>
 <p>发起者包括：“制止窃选主任”Ali Alexander，茶党爱国者（Tea Party Patriots）总裁珍妮?贝丝?马丁（JennyBeth Martin），菲利斯?斯莱弗里（Phyllis Schlafly）的Eagle论坛（ELDF）总裁埃德?马丁（Ed Martin），X战略（X Strategies）首席执行官（Alexander Bruesewitz），川普选举人（Trump Electors ）。</p>
 <p>“制止窃选”是一个广泛的联盟，自11月3日选举日以来，连续六周负责组织抗议活动，要求进行公正的选举和透明计票。</p>
 <p>该组织已经游说了州立法机构，向州选举官员请愿，在举行选举诚信听证会之前寻找训练有素的证人，并向官员们发出了数十万个电话和电子邮件。他们也在国会山组织了数十万人的活动，支持川普总统。</p>
 <h2>网络收看方式：</h2>
-<p>大纪元新闻网：<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/nf1334917.md#1" target="_blank" rel="noopener noreferrer">https://github.com/drjlsn3260/djy/blob/master/gb/nf1334917.md#1</a><br />
-大纪元YouTube直播：<ahref="https://www.youtube.com/c/djynews" target="_blank" rel="noopener noreferrer">https://www.youtube.com/c/djynews</a><br />
+<p>大纪元新闻网：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/nf1334917.md#1" target="_blank" rel="noopener noreferrer">https://github.com/eizauy3553/djy/blob/master/gb/nf1334917.md#1</a><br />
+大纪元YouTube直播：<ahref=""></a><a href="https://dwzgr3popmlhv.cloudfront.net/D7dD6i38z"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/djynews" target="_blank" rel="noopener noreferrer">"></a><a href="https://dwzgr3popmlhv.cloudfront.net/D7dD6i38z"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/djynews</a><br />
 大纪元脸书直播：<ahref="http://facebook.com/djy.news" target="_blank" rel="noopener noreferrer">facebook.com/djy.news</a></p>
 <p>【支持】为真相护航 为沉默发声，就在今天，支持大纪元<br />
 <ahref="https://donate.epochtimes.com/" target="_blank" rel="noopener noreferrer">https://donate.epochtimes.com</a></p>
@@ -26,45 +27,44 @@
 <p>责任编辑：孙芸?#</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616880.md#1">组图：华府民众举行挺川普及停止窃选集会</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616961.md#1">组图：士气高涨 美国民众华府集会支持川普</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12617754.md#1">华府大型“挺川”集会 民众支持“END CCP”</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12619262.md#1">组图：民众聚集于华府 举行挺川普集会游行</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/13/n12616880.md#1">组图：华府民众举行挺川普及停止窃选集会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/13/n12616961.md#1">组图：士气高涨 美国民众华府集会支持川普</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/13/n12617754.md#1">华府大型“挺川”集会 民众支持“END CCP”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/14/n12619262.md#1">组图：民众聚集于华府 举行挺川普集会游行</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/20/2/20/n11884306.md#1">退出无神论组织 做个神佛保佑的人</a></li><li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/29/n11486472.md#1" target="_blank">听音乐喜得大法 以色列学员伦敦街头讲真相</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/6/n10032641.md#1" target="_blank">作恶者鉴：迫害法轮功终难逃法网</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/22/n11402499.md#1" target="_blank">法轮功阿根廷中领馆前反迫害 十年如一日</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/9/n12605810.md#1">《诸世纪》预言抽丝剥茧 掀美大选黑幕真相</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/10/n12609444.md#1">【命理】不孝子砸老母 招来雷神诛杀</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/9/n12606110.md#1">前以色列高官：外星人与人类联系 川普知道</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/9/n12605329.md#1">《诸世纪》预言揭美国大选舞弊内幕和密谋者</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/11/28/n12581416.md#1">转世记忆58年历历在目 和尚说今生福报因果</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/15/n12621117.md#1">【十字路口】拜登当选？共和党力抗 川普反击</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12619863.md#1">【直播】密歇根州议会举行多米尼听证会</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/7/25/n12283438.md#1">晴雯的身世  富察傅恒的奶娘，繁华散场时的女子</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616298.md#1">【十字路口】最高院为何拒绝 川普还有王牌吗</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616255.md#1">川普到西点军校看球赛 欢迎声“山呼海啸”</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616453.md#1">全球策略联盟主席：拜登不会当选 神主宰一切</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12617843.md#1">做核酸检测视频疯传 江疏影一句回应登热搜</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12617711.md#1">演员不背台词只靠提词板 章子怡直呼搭戏痛苦</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/15/n12620919.md#1">毛晓彤出生时被弃垃圾桶 成名后遭父索赡养费</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12619236.md#1">黄子佼抱假婴搞笑登场 红白主持群祝当爸</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616518.md#1">SJ作客《认识的哥哥》 自揭成员过往大吵内幕</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616588.md#1">皮夹在台弄丢很快取回 外国人：台湾万岁！</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616814.md#1">世界上最寒冷的学校 -51°C也要上课</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12618609.md#1">真实报导美国大选 大纪元让网民刮目相看</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12618931.md#1">刻有川普大楼座标 神秘金属柱子在澳洲出现</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/15/n12621699.md#1">印裔占星师分析 川普未来一个月如何逆转胜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674840.md#1">【美食天堂】鲜虾肠粉做法～完美比例配方！</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/drjlsn3260/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/drjlsn3260/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/11/n12612201.htm">【直播】川普支持者国会山挑战选举人团认证</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/11/n12612201.htm">【重播】川普支持者国会山挑战选举人团认证</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/drjlsn3260/djy/blob/master/gb/20/12/11/n12612201.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/drjlsn3260/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/drjlsn3260/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/drjlsn3260/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/12/11/n12612201.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
